--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,13 @@
 			<artifactId>aws-java-sdk-core</artifactId>
 			<version>1.12.460</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.0.4</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
